; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_smt.c_t4_free_smt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_smt.c_t4_free_smt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smt_data = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@M_CXGBE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @t4_free_smt(%struct.smt_data* %0) #0 {
  %2 = alloca %struct.smt_data*, align 8
  %3 = alloca i32, align 4
  store %struct.smt_data* %0, %struct.smt_data** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.smt_data*, %struct.smt_data** %2, align 8
  %7 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %4
  %11 = load %struct.smt_data*, %struct.smt_data** %2, align 8
  %12 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %11, i32 0, i32 2
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = call i32 @mtx_destroy(i32* %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load %struct.smt_data*, %struct.smt_data** %2, align 8
  %24 = getelementptr inbounds %struct.smt_data, %struct.smt_data* %23, i32 0, i32 1
  %25 = call i32 @rw_destroy(i32* %24)
  %26 = load %struct.smt_data*, %struct.smt_data** %2, align 8
  %27 = load i32, i32* @M_CXGBE, align 4
  %28 = call i32 @free(%struct.smt_data* %26, i32 %27)
  ret i32 0
}

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @rw_destroy(i32*) #1

declare dso_local i32 @free(%struct.smt_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
